tulip: overlay:enable smart clock

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -574,4 +574,7 @@
    <!-- Whether device has a physical display cutout -->
     <bool name="config_physicalDisplayCutout">true</bool>
 
- </resources>	</resources>
+   <!-- Whether to enable smart clock feature -->
+    <bool name="config_enableSmartClock">true</bool>
+
+ </resources>	
