--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -531,17 +531,16 @@
          Example for a 10dp x 10dp square top-center cutout:
                 <string ...>M -5,0 L -5,10 L 5,10 L 5,0 Z @dp</string>
          @see https://www.w3.org/TR/SVG/paths.html#PathData
-         -->
-    <!-- Height of the status bar in portrait -->
-    <dimen name="status_bar_height_portrait">88px</dimen>
+    -->
+    <string translatable="false" name="config_mainBuiltInDisplayCutoutRectApproximation">
+        M 276.86,88
+        H -276.87
+        V 0
+        H 276.86
+        Z
+    </string>
 
-    <!-- Height of the status bar -->
-    <dimen name="status_bar_height">88px</dimen>
-
-    <!-- Height of the status bar in landscape -->
-    <dimen name="status_bar_height_landscape">24dp</dimen>
-
-<string translatable="false" name="config_mainBuiltInDisplayCutout">
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">
         M-303,0
         L303,0
         C297.996921,0 293.7782,0.963094935 290.461489,2.86688725
@@ -562,6 +561,15 @@
         Z
     </string>
 
+    <!-- Height of the status bar in portrait -->
+    <dimen name="status_bar_height_portrait">88px</dimen>
+    <!-- Height of the status bar in landscape -->
+    <dimen name="status_bar_height_landscape">28dp</dimen>
+    <!-- Height of area above QQS where battery/time go (equal to status bar height if > 48dp) -->
+    <dimen name="quick_qs_offset_height">88px</dimen>
+    
+    <dimen name="rounded_corner_radius_top">85px</dimen>
+
     <!-- Whether to show battery percentage inside icon -->
     <bool name="config_battery_percentage_show_inside_icon">true</bool>
 
@@ -571,10 +579,10 @@
     <!-- Whether device ignores the RSSNR signal implementation -->
     <bool name="config_ignoreRssnrSignalLevel">true</bool>
 
-   <!-- Whether device has a physical display cutout -->
+    <!-- Whether device has a physical display cutout -->
     <bool name="config_physicalDisplayCutout">true</bool>
 
-   <!-- Whether to enable smart clock feature -->
+    <!-- Whether to enable smart clock feature -->
     <bool name="config_enableSmartClock">true</bool>
 
- </resources>	
+ </resources>
